# ai-proxy-service

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_rename_api_tokens_to_api_keys.py  d52391f4d70c_create_users_and_tokens.py
docker/: Dockerfile  docker-compose.yml  litellm_config.yaml
scripts/: init_db.py  setup.sh  start.sh
src/application/use_cases/api_key/: create_api_key.py  revoke_api_key.py
src/application/use_cases/llm/: chat.py
src/application/use_cases/user/: login_user.py  register_user.py
src/domain/api_key/: aggregate.py  events.py  repository.py  value_objects.py
src/domain/services/: llm_service.py
src/domain/shared/: exceptions.py  value_objects.py
src/domain/token_usage/: aggregate.py  repository.py  value_objects.py
src/domain/user/: aggregate.py  events.py  repository.py  value_objects.py
src/infrastructure/auth/: jwt_service.py  password_hasher.py
src/infrastructure/cache/: redis_cache.py
src/infrastructure/config/: settings.py
src/infrastructure/llm/: litellm_service.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: api_key_model.py  token_usage_model.py  user_model.py
src/infrastructure/persistence/repositories/: api_key_repository.py  token_usage_repository.py  user_repository.py
src/presentation/: main.py
src/presentation/api/: dependencies.py
src/presentation/api/v1/: anthropic_compat.py  api_keys.py  auth.py  llm.py  token_usage.py
src/presentation/dto/: schemas.py
tests/integration/: test_claude_sonnet.py
tests/unit/application/: test_api_key.py  test_login_user.py
